# pypoetryworkflow

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  setup.yml
src/pycalc/operations/: sum.py
tests/operations/: test_operations.py
