[project]
name = "pycalc"
version = "0.1.0"
description = ""
authors = [
    {name = "lorenzopandolfo",email = "lorenzopandolfo2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "pycalc", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ruff = "^0.11.7"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
